# glory-rs

./: # WEBLINK RESTAPI.md  .dockerignore  .env.example  .env.production.example  .gitignore  .gitmodules  .varsense-report.md  Cargo.toml  Dockerfile  README.md  cargo-test-latest.txt  clippy-latest.txt  dev.ps1  docker-compose.yml  glory-rust-template.code-workspace  openapi.json  package-lock.json  package.json  roadmap.md  test.txt  test_output.txt
.sqlx/: query-0042c6790d22e4673e9e09c6878e3720cdf93841a328ab1c4d5e9f9257da157a.json  query-00553ae20080f155d80830c6a0496221134b40467cc3ed03cf4b27a5e86caf9f.json  query-007334ed9aa06a327228a71b0c5b16411469603a1fea36c3097125ddbe8d26dc.json  query-00a4a185bc53a560f4af3824a9ae54efbff16895432f1c1023be842568eaf9d2.json  query-00a860c227c5393a46d3427549009429a1f279bd6491908597ae34da8810313c.json  query-00d74dd2f582f58547ed309a77089fa4d37459956ea263d1eadf252552091483.json  query-01538aa3cbf54bce174455d3b66dc7014d2cdf33d7f249ba1a7f20fdb94c5b9a.json  query-0232f18838d549b7adcd371600c173f3754f4066efa01123c6ebc64679a0d287.json  query-024771d6a13a7e3cd0f7107bfe920bc93d6596dbfd1758b74d4ffa6658e001e9.json  query-0299a17eeca26099eb36a87a0d22a3eba446268a650a3f9a1923fb92ddc23f7f.json  query-02b3bc0c055d91403058d6e0155803c4b816f6219a8e7f7916388e1e4a614c64.json  query-02c3b9612145e5ad82919a4a423d36d75eb1e1805a3c866a9b42947523c32cea.json  query-02f7131c6d34f0df5b6cf0f72ca4489d31822f1a3b7d7819b319a86fef35ebd5.json  query-0322d15289521d9d6c0dc9efb885f7f971b98e1d13a1f1ef4395a7f47f0bd971.json  query-034b84c56d196a821bbb3cdd2f4871877428b5aff7166b96d56b0fa8599ea592.json  query-036abe91d8aed10229ec67ed6a1d284511a48a139a89347b8cb6dadd5e6a9b4a.json  query-03daed180fdcb2f0ecf589755622dd3177144a3c0000fce3dbc53b8abf2ceb57.json  query-04203a019af98a42c564ae6fd710ff5e352b7bb1a96762a000c3ebe7c26efc61.json  query-0435d257a4a56363f84a6e88bd9527196f4f210e8fb43e1c65ceb19305a38ec1.json  query-04703ec3939b9b09eb6ef3fad71ef927dc259d4dbe4e3055fff4a70356c445c5.json  query-04d44ed45d2b94bcd8b1a1c72bc1903a19e1b83a07ae478c08bf6a87bf4ec1af.json  query-05423231a4f7bc65b0034cecc312bb8fbbff3f8dc64433059423e236c18bb9ee.json  query-0578b8840381dcbb68f9a1b7d4f8f534d13a6cedb3bab035d3ddea65558fa8a4.json  query-0628ae7e42c557b89fbc2f4a30441e6bdf4baf951c3ab64f72b54e9cc5c2b71a.json  query-06418c6ba23759547297f2d40c49fd3fa30060529a8c129e0f53dcabb4acc6e6.json  query-07a50a8e24f451a7dde9ffb0c0f1851206acfebcb81e6376cd1bde3956f0dfec.json  query-07d5fa65d5c5fb22be5010d887b25e188c82c42bf28f237c1451d64ccfafcd93.json  query-081ed3bd410b58ddb6236d0aac86bedb1ed9a99001cbe370ed0a721db1d100d6.json  query-0827037ca1da29895c732b29b20846c82f82201398ec761c5937d48cc98fbb05.json  query-082faeb8d7ac05ed7eab9a5f9823ff49f94901dba3c8d4af95246515b4aec19a.json  query-088f059fe4e29390798407df70628afe5744291dbb97090b54dddfd518acf95d.json  query-08a684db7b2c54c5682e3168085c5989bfaa83a8785a2efdfa5912647bc4cb3f.json  query-08b4e98ed5bc3d5d6899df90eb9f94bbcc1aeab9fbe040bc2dff3151874c500c.json  query-08f8099ecdac18e2bae39475dc17e8f8524499adbb97e5452ea42c2f6135e67a.json  query-090d623be0dc363382eb8b9c60905aaf2bd19e1d8df83337b8f2da306d6b4ee6.json  query-0914d12368f994e79f967210f25c62448f7d06c0533fd1240dcc5234f2f7cc9c.json  query-0917a67aec3449afeb528dc287a8094fc23540d6f05cc2f1d37e1caeaa072a3d.json  query-09c5a31c66ba95f7e96dec2d9e4e6f1567d05d918ddd8314ff2d884103a0cb37.json  query-09ec2db24f46f3258dbb77670e7c7c28557e86cfdfa2d5f1327dd329fde49f02.json  query-0a1c02702d105177e7010ead3602d2dc6ac639dda71c1de1d27136ae06694d78.json  (+770 more)
App/: roadmap.md
cliente/: transcripciones-videos.md
clients/: README.md
clients/desktop/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
clients/desktop/src-tauri/.cargo/: config.toml
clients/desktop/src-tauri/capabilities/: desktop.json  principal.json
clients/desktop/src-tauri/icons/: app-icon-manifest.json  icon.icns
clients/desktop/src-tauri/icons/android/values/: ic_launcher_background.xml
clients/desktop/src-tauri/src/: lib.rs  main.rs
content/: hosting.toml  order_delegations.toml  order_payments.toml  order_phases.toml  order_problems.toml  order_refunds.toml  orders.toml  projects.toml  services.toml  team_members.toml  users.toml  vps_subscriptions.toml
examples/: seed_admin.rs  seed_test_data.rs
frontend/: .env.development  Dockerfile  components.json  index.html  nginx.conf  orval.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.mezclador.json  tsconfig.tsbuildinfo  vite.config.ts
migrations/: 20260325000000_initial.down.sql  20260325000000_initial.up.sql  20260325100000_restaurant.down.sql  20260325100000_restaurant.up.sql  20260326000000_crm_etiquetas.down.sql  20260326000000_crm_etiquetas.up.sql  20260326100000_reservas_vista_dia.down.sql  20260326100000_reservas_vista_dia.up.sql  20260326200000_plano_sala.down.sql  20260326200000_plano_sala.up.sql  20260326300000_password_reset.down.sql  20260326300000_password_reset.up.sql  20260326400000_configuracion.down.sql  20260326400000_configuracion.up.sql  20260326500000_campanas_marketing.down.sql  20260326500000_campanas_marketing.up.sql  20260326600000_plantillas_whatsapp.down.sql  20260326600000_plantillas_whatsapp.up.sql  20260326700000_recordatorios_automaticos.down.sql  20260326700000_recordatorios_automaticos.up.sql  20260328000000_api_keys.up.sql  20260328200000_groq_api_key.down.sql  20260328200000_groq_api_key.up.sql  20260328300000_notificaciones.down.sql  20260328300000_notificaciones.up.sql  20260328400000_integraciones_marketing.down.sql  20260328400000_integraciones_marketing.up.sql  20260330000000_meta_phone_number_id.down.sql  20260330000000_meta_phone_number_id.up.sql  20260401000000_auto_venta_y_turnos_config.down.sql  20260401000000_auto_venta_y_turnos_config.up.sql  20260402000000_campana_plantilla_whatsapp.down.sql  20260402000000_campana_plantilla_whatsapp.up.sql  20260403000000_auto_venta_default_true.down.sql  20260403000000_auto_venta_default_true.up.sql  20260403100000_url_haddock.down.sql  20260403100000_url_haddock.up.sql  20260403200000_venta_relaciones.up.sql  (+132 more)
(+2201 files in other folders)
