[package]
name = "glory-backend"
version = "0.1.0"
edition = "2021"
description = "Kamples backend (Rust + Axum + SQLx) — migración desde glorytemplate PHP"
license = "MIT"
authors = ["1ndoryu"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id", "limit", "fs"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
json5 = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "uuid", "chrono", "json", "macros", "ipnetwork"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Cache / Redis
redis = { version = "0.27", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }
deadpool-redis = "0.18"

# OpenAPI
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Glory reusable framework
glory-rs = { path = "glory-rs/backend" }

# Environment / Config
dotenvy = "0.15"

# Logging / observabilidad
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# HTTP cliente externo (Stripe, Groq, OpenAI, FCM, OAuth Google) — añadiremos features según fase
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }

# Crypto / hashes / IDs
sha2 = "0.10"
crc32fast = "1.4"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
nanoid = "0.4"
slug = "0.1"
atomic_web_push = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }

# Audio DSP (Fase 4)
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
rustfft = "6"
ndarray = "0.16"

# Concurrencia
dashmap = "6"
parking_lot = "0.12"

# Utilidades varias
mime = "0.3"
mime_guess = "2"
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Storage S3 (feature-gated, 174A-27)
aws-config = { version = "1", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"], optional = true }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"], optional = true }
aws-credential-types = { version = "1", optional = true }
aws-smithy-types = { version = "1", features = ["byte-stream-poll-next"], optional = true }

# NOTA: dependencias diferidas a fases posteriores (se añaden cuando se necesiten):
# - oauth2 (Fase 2): OAuth Google PKCE
# - lettre (Fase 11): SMTP
# - web-push (Fase 11): VAPID
# - async-stripe (Fase 12): Stripe SDK
# - gcp_auth (Fase 11): FCM service-account
# Esto evita pull-in de openssl-sys en Windows (rustls-tls preferido).

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3"

[features]
default = []
# Habilita el backend S3Storage (aws-sdk-s3 + aws-config). En produccion en cloud
# compilar con `--features s3`. Por defecto se usa LocalFs (cero deps extra).
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-credential-types", "dep:aws-smithy-types"]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
