[package]
name = "glory-backend"
version = "0.1.0"
edition = "2021"
description = "Kamples backend (Rust + Axum + SQLx) — migración desde glorytemplate PHP"
license = "MIT"
authors = ["1ndoryu"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id", "limit", "fs"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
json5 = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "uuid", "chrono", "json", "macros", "ipnetwork"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Cache / Redis
redis = { version = "0.27", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }
deadpool-redis = "0.18"

# OpenAPI
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Glory reusable framework
glory-rs = { path = "glory-rs/backend" }

# Environment / Config
dotenvy = "0.15"

# Logging / observabilidad
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# HTTP cliente externo (Stripe, Groq, OpenAI, FCM, OAuth Google) — añadiremos features según fase
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname", "tokio1"] }
stripe = { package = "async-stripe", version = "1.0.0-rc.5", default-features = false, features = ["rustls-tls-webpki-roots", "rustls-aws-lc-rs"] }
stripe_billing = { package = "async-stripe-billing", version = "1.0.0-rc.5", default-features = false, features = ["billing_portal_session"] }
stripe_checkout = { package = "async-stripe-checkout", version = "1.0.0-rc.5", default-features = false, features = ["checkout_session"] }
stripe_connect = { package = "async-stripe-connect", version = "1.0.0-rc.5", default-features = false, features = ["account", "account_link", "login_link"] }
stripe_core = { package = "async-stripe-core", version = "1.0.0-rc.5", default-features = false, features = ["balance", "customer"] }
stripe_product = { package = "async-stripe-product", version = "1.0.0-rc.5", default-features = false, features = ["price"] }
stripe_types = { package = "async-stripe-types", version = "1.0.0-rc.5" }
stripe_webhook = { package = "async-stripe-webhook", version = "1.0.0-rc.5", default-features = false, features = ["async-stripe-billing", "async-stripe-checkout", "async-stripe-core", "deserialize"] }

# Crypto / hashes / IDs
sha2 = "0.10"
crc32fast = "1.4"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
nanoid = "0.4"
slug = "0.1"
atomic_web_push = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }

# Audio DSP (Fase 4)
symphonia = { version = "0.5", features = ["all-codecs", "all-formats"] }
rustfft = "6"
ndarray = "0.16"

# Concurrencia
dashmap = "6"
parking_lot = "0.12"

# Utilidades varias
mime = "0.3"
mime_guess = "2"
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
# [174A-108b] rustls 0.23 requiere registrar un CryptoProvider explícito cuando hay
# múltiples backends compilados. Lo expone como dep directa para llamarlo desde main.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

# Storage S3 (feature-gated, 174A-27)
aws-config = { version = "1", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"], optional = true }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"], optional = true }
aws-credential-types = { version = "1", optional = true }
aws-smithy-types = { version = "1", features = ["byte-stream-poll-next"], optional = true }

# NOTA: dependencias diferidas a fases posteriores (se añaden cuando se necesiten):
# - oauth2 (Fase 2): OAuth Google PKCE
# - Esto evita pull-in de openssl-sys en Windows (rustls-tls preferido).

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3"

[features]
default = []
# Habilita el backend S3Storage (aws-sdk-s3 + aws-config). En produccion en cloud
# compilar con `--features s3`. Por defecto se usa LocalFs (cero deps extra).
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-credential-types", "dep:aws-smithy-types"]

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# [294A-1] Perfiles afinados para acelerar compilaciones.
# Dev: minimizar trabajo del backend del compilador y del linker.
#  - opt-level=0 nuestro código (compila instantáneo).
#  - debug=1 (line tables only) en vez de "true" (=2): -50% tamaño binario,
#    linker mucho más rápido. Stack traces siguen siendo útiles.
#  - split-debuginfo=unpacked: el linker no embebe los .pdb, los deja aparte
#    (en Windows MSVC reduce mucho el tiempo de link).
#  - incremental=true ya es el default en dev, lo dejamos explícito.
[profile.dev]
opt-level = 0
debug = 1
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256
split-debuginfo = "unpacked"

# Dependencias en dev compiladas con opt-level=1: se compilan UNA vez y
# corren mucho más rápido en runtime (sqlx, tokio, hashing). Solo afecta a
# crates externos, no a nuestro código (que sigue en opt=0).
[profile.dev.package."*"]
opt-level = 1
debug = false

# Tests: igual que dev pero deshabilita incremental para evitar invalidaciones
# falsas cuando se mezcla `cargo test` con `cargo run`.
[profile.test]
opt-level = 0
debug = 1

# Release: LTO thin (+~5% perf, mucho más rápido que LTO=true), 16 codegen
# units para paralelizar mejor el backend, strip de símbolos para imagen
# Docker más pequeña.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"
debug = false
incremental = false

# Perfil intermedio para builds CI/Docker rápidos sin renunciar a optimización
# básica. Útil para staging o smoke-tests de imagen Docker.
# Uso: `cargo build --profile release-fast --bin glory-backend`.
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 256
opt-level = 2
