[package]
name = "glory-backend"
version = "0.1.0"
edition = "2021"
description = "Glory RS — Template para sitios web con Rust + React + OpenAPI"
license = "MIT"
authors = ["1ndoryu"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "set-header", "compression-gzip", "compression-br"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "uuid", "chrono"] }

# OpenAPI
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Utils
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures = "0.3"

# Rate limiting
governor = "0.7"
tower_governor = "0.4"

# HTTP client (Stripe API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Validation (domain regex)
regex = "1"

# PDF text extraction (T-5)
pdf-extract = "0.7"

# Base64 encoding (T-5 Groq Vision)
base64 = "0.22"

# Random generation (SFTP credentials)
rand = "0.8"

# Image processing (104A-5)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }

# URL encoding (155A-1 Google OAuth)
urlencoding = "2"

# DNS TXT lookup para verificación de ownership de dominios
hickory-resolver = { version = "0.24", features = ["tokio-runtime", "system-config"] }

# Email (154A-15c)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport", "hostname"] }

# Glory framework
glory-rs = { path = "glory-rs/backend" }

[dev-dependencies]
serde_yaml = "0.9"
tokio-test = "0.4"

# [124A-OPT1] Perfil dev optimizado: menos debug info = menor disco + builds más rápidos.
# debug = "line-tables-only" produce ~60% menos datos de debug que full.
# Dependencias con opt-level=1 y sin debug: se compilan una vez, más rápido después.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "packed"

[profile.dev.package."*"]
opt-level = 1
debug = false

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
